fix dark mode

--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
   margin: 0;
   min-height: 100vh;
   padding-bottom: 24px;
+  background-color: #fff;
 }
 
 button {
@@ -180,5 +181,15 @@ table td.digits {
     padding: 24px;
     flex-direction: column;
     align-items: flex-start;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #fff;
+  }
+
+  .popup {
+    background-color: #fff;
   }
 }
